<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FigureSettingsActivity">

    <ScrollView
        android:id="@+id/figureSettingScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/figure_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/with_what_text"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/consola"
                android:text="@string/with_what_text"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/with_sideA_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideA" />

            <CheckBox
                android:id="@+id/with_sideB_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideB" />

            <CheckBox
                android:id="@+id/with_sideC_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideC" />

            <CheckBox
                android:id="@+id/with_sideD_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideD" />

            <CheckBox
                android:id="@+id/with_radius_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/radius" />

            <CheckBox
                android:id="@+id/with_perimeter_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/perimeter" />

            <CheckBox
                android:id="@+id/with_area_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/area" />

            <CheckBox
                android:id="@+id/with_volume_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/volume" />

            <CheckBox
                android:id="@+id/with_diagonal_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/diagonal" />

            <CheckBox
                android:id="@+id/with_height_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/height" />

            <CheckBox
                android:id="@+id/with_median_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/median" />

            <TextView
                android:id="@+id/what_find_text"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/what_find_text"
                android:textSize="24sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp" />

            <CheckBox
                android:id="@+id/find_sideA_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/sideA" />

            <CheckBox
                android:id="@+id/find_sideB_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/sideB" />

            <CheckBox
                android:id="@+id/find_sideC_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideC" />

            <CheckBox
                android:id="@+id/find_sideD_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/sideD" />

            <CheckBox
                android:id="@+id/find_radius_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/radius" />

            <CheckBox
                android:id="@+id/find_perimeter_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/perimeter" />

            <CheckBox
                android:id="@+id/find_area_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/area" />

            <CheckBox
                android:id="@+id/find_volume_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/volume" />

            <CheckBox
                android:id="@+id/find_diagonal_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:text="@string/diagonal" />

            <CheckBox
                android:id="@+id/find_height_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/height" />

            <CheckBox
                android:id="@+id/find_median_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp"
                android:text="@string/median" />

            <TextView
                android:id="@+id/other_settings_text"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/other_settings_text"
                android:textSize="24sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp" />

            <CheckBox
                android:id="@+id/equilateral_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:text="@string/equilateral"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp" />

            <CheckBox
                android:id="@+id/isosceles_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:text="@string/isosceles"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp" />

            <CheckBox
                android:id="@+id/rectangular_checkbox"
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consolai"
                android:text="@string/rectangular"
                android:textSize="24sp"
                android:layout_marginStart="54dp"
                android:layout_marginTop="6dp" />

            <View
                android:id="@+id/parseScroll"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/count_btn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/consola"
        android:text="@string/count_btn_text"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>